fix mobile UX and page style on tablet

--- a/src/styles/pages/Home.css
+++ b/src/styles/pages/Home.css
@@ -1,5 +1,5 @@
 .Home.page {
-  margin-top: 80px;
+  margin-top: 110px;
   position: relative;
   pointer-events: none;
   z-index: 1;
@@ -50,13 +50,19 @@
 
 @media (min-width: 576px) {
   .Home {
-    margin-top: 0;
+    margin-top: 60px;
   }
   .Home h2 {
     font-size: 5vw;
   }
   .Home h2.outlined {
     font-size: 6vh;
+  }
+}
+
+@media (min-width: 992px) {
+  .Home {
+    margin-top: 0;
   }
 }
 
